calico_versioned_docs/version-3.24/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
---
description: Install Calico networking and network policy for on-premises deployments.
---

import variables from '@site/calico_versioned_docs/version-3.24/variables';
import CodeBlock from '@theme/CodeBlock';

# Install Calico networking and network policy for on-premises deployments

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Big picture

Install {variables.prodname} to provide both networking and network policy for self-managed on-premises deployments.

## Value

**{variables.prodname} networking** and **network policy** are a powerful choice for a CaaS implementation. If you have the networking infrastructure and resources to manage Kubernetes on-premises, installing the full {variables.prodname} product provides the most customization and control.

## Concepts

### {variables.prodname} operator

{variables.prodname} is installed by an operator which manages the installation, upgrade, and general lifecycle of a {variables.prodname} cluster. The operator is
installed directly on the cluster as a Deployment, and is configured through one or more custom Kubernetes API resources.

### {variables.prodname} manifests

{variables.prodname} can also be installed using raw manifests as an alternative to the operator. The manifests contain the necessary resources for installing {variables.prodname} on each node in your Kubernetes cluster. Using manifests is not recommended as they cannot automatically manage the lifecycle of the {variables.prodname} as the operator does. However, manifests may be useful for clusters that require highly specific modifications to the underlying Kubernetes resources.

## Before you begin...

- Ensure that your Kubernetes cluster meets [requirements](../requirements.mdx).
  If you do not have a cluster, see [Installing kubeadm](https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/install-kubeadm/).

## How to

- [Install Calico](#install-calico)

### Install Calico

<Tabs>
<TabItem label="Operator" value="Operator-0">

1. Install the operator on your cluster.

   <CodeBlock language='bash'>
   kubectl create -f {variables.manifestsUrl}/manifests/tigera-operator.yaml
   </CodeBlock>

1. Download the custom resources necessary to configure {variables.prodname}

   <CodeBlock language='bash'>
   curl {variables.manifestsUrl}/manifests/custom-resources.yaml -O
   </CodeBlock>

   If you wish to customize the {variables.prodname} install, customize the downloaded custom-resources.yaml manifest locally.

1. Create the manifest in order to install {variables.prodname}.

   ```bash
   kubectl create -f custom-resources.yaml
   <CodeBlock language=''>
1. Verify {variables.prodname} installation in your cluster.

   </CodeBlock>
   watch kubectl get pods -n calico-system
   ```
   You should see a result similar to the below.

   ```
   NAMESPACE     NAME                READY   STATUS                  RESTARTS         AGE
   kube-system   calico-node-txngh   1/1     Running                   0              54s
   ```
     
<GeekDetails
  prodname='{variables.prodname}'
  details='Policy:Calico,IPAM:Calico,CNI:Calico,Overlay:IPIP,Routing:BGP,Datastore:Kubernetes'
/>

</TabItem>
<TabItem label="Manifest" value="Manifest-1">

Based on your datastore and number of nodes, select a link below to install {variables.prodname}.

:::note

The option, **Kubernetes API datastore, more than 50 nodes** provides scaling using [Typha daemon](../../../reference/typha/index.mdx). Typha is not included for etcd because etcd already handles many clients so using Typha is redundant and not recommended.

:::

- [Install Calico with Kubernetes API datastore, 50 nodes or less](#install-calico-with-kubernetes-api-datastore-50-nodes-or-less)
- [Install Calico with Kubernetes API datastore, more than 50 nodes](#install-calico-with-kubernetes-api-datastore-more-than-50-nodes)
- [Install Calico with etcd datastore](#install-calico-with-etcd-datastore)

#### Install Calico with Kubernetes API datastore, 50 nodes or less

1. Download the {variables.prodname} networking manifest for the Kubernetes API datastore.

   <CodeBlock language='bash'>
   curl {variables.manifestsUrl}/manifests/calico.yaml -O
   </CodeBlock>

1. If you are using pod CIDR `192.168.0.0/16`, skip to the next step.
   If you are using a different pod CIDR with kubeadm, no changes are required &#8212; Calico will automatically detect the CIDR based on the running configuration.
   For other platforms, make sure you uncomment the CALICO_IPV4POOL_CIDR variable in the manifest and set it to the same value as your chosen pod CIDR.
1. Customize the manifest as necessary.
1. Apply the manifest using the following command.

   ```bash
   kubectl apply -f calico.yaml
   ```

The geeky details of what you get:

<GeekDetails
  prodname='{variables.prodname}'
  details='Policy:Calico,IPAM:Calico,CNI:Calico,Overlay:IPIP,Routing:BGP,Datastore:Kubernetes'
/>

#### Install Calico with Kubernetes API datastore, more than 50 nodes

1. Download the {variables.prodname} networking manifest for the Kubernetes API datastore.

   <CodeBlock language='bash'>
   curl {variables.manifestsUrl}/manifests/calico-typha.yaml -o calico.yaml
   </CodeBlock>

1. If you are using pod CIDR `192.168.0.0/16`, skip to the next step.
   If you are using a different pod CIDR with kubeadm, no changes are required &#8212; Calico will automatically detect the CIDR based on the running configuration.
   For other platforms, make sure you uncomment the CALICO_IPV4POOL_CIDR variable in the manifest and set it to the same value as your chosen pod CIDR.
1. Modify the replica count to the desired number in the `Deployment` named, `calico-typha`.

   ```yaml noValidation
   apiVersion: apps/v1beta1
   kind: Deployment
   metadata:
     name: calico-typha
     ...
   spec:
     ...
     replicas: <number of replicas>
   ```

   We recommend at least one replica for every 200 nodes, and no more than
   20 replicas. In production, we recommend a minimum of three replicas to reduce
   the impact of rolling upgrades and failures. The number of replicas should
   always be less than the number of nodes, otherwise rolling upgrades will stall.
   In addition, Typha only helps with scale if there are fewer Typha instances than
   there are nodes.

   :::note

   If you set `typha_service_name` and set the Typha deployment replica
   count to 0, Felix will not start.

   :::

1. Customize the manifest if desired.
1. Apply the manifest.

   ```bash
   kubectl apply -f calico.yaml
   ```

The geeky details of what you get:

<GeekDetails
  prodname='{variables.prodname}'
  details='Policy:Calico,IPAM:Calico,CNI:Calico,Overlay:IPIP,Routing:BGP,Datastore:Kubernetes'
/>

#### Install Calico with etcd datastore

:::note

The **etcd** database is not recommended for new installs. However, it is an option if you are running {variables.prodname} as the network plugin for both OpenStack and Kubernetes.

:::

1. Download the {variables.prodname} networking manifest for etcd.

   <CodeBlock language='bash'>
   curl {variables.manifestsUrl}/manifests/calico-etcd.yaml -o calico.yaml
   </CodeBlock>

1. If you are using pod CIDR `192.168.0.0/16`, skip to the next step.
   If you are using a different pod CIDR with kubeadm, no changes are required &#8212; Calico will automatically detect the CIDR based on the running configuration.
   For other platforms, make sure you uncomment the CALICO_IPV4POOL_CIDR variable in the manifest and set it to the same value as your chosen pod CIDR.
1. In the `ConfigMap` named, `calico-config`, set the value of `etcd_endpoints` to the IP address and port of your etcd server.
   :::note

   You can specify more than one `etcd_endpoint` using commas as delimiters.

   :::

1. Customize the manifest if desired.
1. Apply the manifest using the following command.

   ```bash
   kubectl apply -f calico.yaml
   ```

The geeky details of what you get:

<GeekDetails
  prodname='{variables.prodname}'
  details='Policy:Calico,IPAM:Calico,CNI:Calico,Overlay:IPIP,Routing:BGP,Datastore:etcd'
/>

</TabItem>
</Tabs>

## Next steps

**Required**

- [Install and configure calicoctl](../../../operations/calicoctl/install.mdx)

**Recommended - Networking**

- If you are using the default BGP networking with full-mesh node-to-node peering with no encapsulation, go to [Configure BGP peering](../../../networking/configuring/bgp.mdx) to get traffic flowing between pods.
- If you are unsure about networking options, or want to implement encapsulation (overlay networking), see [Determine best networking option](../../../networking/determine-best-networking.mdx).

**Recommended - Security**

- [Secure Calico component communications](../../../network-policy/comms/crypto-auth.mdx)
- [Secure hosts by installing Calico on hosts](../../bare-metal/about.mdx)
- [Secure pods with Calico network policy](../../../network-policy/get-started/calico-policy/calico-network-policy.mdx)
- If you are using {variables.prodname} with Istio service mesh, get started here: [Enable application layer policy](../../../network-policy/istio/app-layer-policy.mdx)
